syntax = "proto3";

package record;


import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "record.v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  schemes: HTTPS;
  host: "yyuck.com";
};

service RecordService {
  rpc List(ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      get: "/record.RecordService/records"
    };
  }
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/record.RecordService/records/{id}"
    };
  }
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/record.RecordService/records",
      body: "*"
    };
  }
  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      patch: "/record.RecordService/records/{id}",
      body: "*"
    };
  }
  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/record.RecordService/records/{id}",
    };
  }
}

// Lottery item
message Record {
  int32 id = 1; // id
  int32 lottery_id = 2; // id
  string user_id = 3; // id
  string value = 4; // lottery image
  repeated string remarks = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message NewRecord {
  int32 lottery_id = 1; // id
  string user_id = 2; // id
  string value = 3; // lottery image
  repeated string remarks = 4;
}

message ListRequest {
  Record record = 1;
}
message ListResponse {
  repeated Record records = 1;
}

message GetRequest {
  int32 id = 1;
}
message GetResponse {
  Record record = 1;
}

message CreateRequest {
  NewRecord record = 1;
}
message CreateResponse {
  Record record = 1;
}

message UpdateRequest {
  int32 id = 1;
  NewRecord record = 2;
}
message UpdateResponse {
  Record record = 1;
}

message DeleteRequest {
  int32 id = 1;
}
message DeleteResponse {
}
